Adding pictures, updated tutorial

--- a/JupyterTutorial.ipynb
+++ b/JupyterTutorial.ipynb
@@ -4,10 +4,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Markdown\n",
-    "## There are three types of cells. This is a Markdown cell. \n",
+    "Let's get started with Jupyter Notebook! \n",
     "\n",
+    "Jupyter Notebook is a tool for interactive, scientific computing. It is a [computing shell](https://en.wikipedia.org/wiki/Shell_(computing), which means that it can run code in a programming language, in this case, Python.\n",
+    "\n",
+    "But it's no ordinary shell. Jupyter Notebook is great because:\n",
+    "    \n",
+    "   1. **It puts code, notes, and plots all in one place.** I used to have to write my code in Python, run it in the bash shell, save output to an Excel file, record the parameters I used in Word, save pictures across several folders, and put it all together in Powerpoint. In Jupyter, *it's all in one place!*\n",
+    "   2. **It's interactive.** You run a code cell, see its output, and go back and run it again. You're playing all the time!\n",
+    "   3. **It's easy to share.** People see exactly what code you ran to get your output.\n",
+    "   4. **It offers a bunch of neat features**, like shell syntax, tab completion, magic commands, history, you name it!\n",
+    "   5. **It supports many other languages**, like R, Julia, and Ruby.\n",
+    "   \n",
+    "   \n",
+    "In this article, we're going to do a tour of Jupyter Notebook. We'll learn about some powerful Python features such as list comprehensions, plotting, and the numpy/scipy stack. You can follow along below. Feel free to **play with the code yourself!** Don't just copy the code that I have-- **try changing up the syntax and see what comes out!** That's how we learn the best.\n",
+    "    \n",
+    "\n",
+    "### Are you ready? Let's go!\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you'd like to follow along, you should first install python and Jupyter Notebook. Details at \n",
+    "\n",
+    "Then, download the directory available at https://github.com/lujonathanh/JupyterTutorial.\n",
+    "\n",
+    "Unzip this to the right directory. Then, from the command line, run `jupyter notebook`\n",
+    "\n",
+    "You should see an image like the below:\n",
+    "\n",
+    "<img src=\"Images/NotebookStartup.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Click JupyterTutorial.ipynb to get to this page:\n",
+    "    \n",
+    "<img2 src=\"Images/NotebookFirstPage.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the User Interface Tutorial by going to \"Help\" under the toolbar, and clicking \"User Interface Tour.\"\n",
+    "\n",
+    "Once you're done with that, we can begin the tutorial."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Part 1: Basics of Markdown\n",
+    "======================================"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Markdown is a typesetting language that makes text formatting easy.\n",
+    "\n",
+    "## This section on Markdown will first show the CODE that we type into the cell, and then show the OUTPUT that results."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Code*\n",
+    "```Markdown\n",
+    "## You can make headers\n",
+    "### and subheaders\n",
+    "#### and subheaders\n",
+    "\n",
+    "## You can also make lists\n",
+    "1. First ordered list item.\n",
+    "2. Another item.\n",
+    "  * Unordered sub-list\n",
+    "\n",
+    "   If you put 3 blank spaces, You can even have properly indented paragraphs!```\n",
+    "   \n",
+    "***\n",
+    "*Output*\n",
     "\n",
     "## You can make headers\n",
     "### and subheaders\n",
@@ -18,31 +104,104 @@
     "2. Another item.\n",
     "  * Unordered sub-list\n",
     "\n",
-    "   If you put 3 blank spaces, You can even have properyly indented paragraphs!\n",
+    "   If you put 3 blank spaces, You can even have properly indented paragraphs!\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Code*\n",
+    "```Markdown\n",
+    "## You can make equations, just like in LaTEX. For example:\n",
+    "\\begin{equation}\n",
+    "a^2 + b^2 = c^2\n",
+    "\\end{equation}```\n",
     "\n",
+    "---\n",
     "\n",
+    "*Output*\n",
     "\n",
     "## You can make equations, just like in LaTEX. For example:\n",
     "\\begin{equation}\n",
     "a^2 + b^2 = c^2\n",
     "\\end{equation}\n",
     "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Code*\n",
+    "```Markdown\n",
+    "## You can include blockquotes\n",
+    "Albert Einstein once said,\n",
     "\n",
+    ">It is not enough that you should understand about applied science in order that your work may increase man's blessings. Concern for man himself and his fate must always form the chief interest of all technical endeavours... in order that the creations of our minds shall be a blessing and not a curse to mankind. Never forget this in the midst of your diagrams and equations. ```\n",
     "\n",
+    "---\n",
+    "\n",
+    "*Output*\n",
     "\n",
     "## You can include blockquotes\n",
     "Albert Einstein once said,\n",
     "\n",
     ">It is not enough that you should understand about applied science in order that your work may increase man's blessings. Concern for man himself and his fate must always form the chief interest of all technical endeavours... in order that the creations of our minds shall be a blessing and not a curse to mankind. Never forget this in the midst of your diagrams and equations. \n",
-    "   \n",
-    "## Or use html\n",
     "\n",
-    "## You can even make images. Here's a picture from innovation's space article.\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Code*\n",
+    "```Markdown\n",
+    "## You can even link images and videos. Here's a picture from innovation's space article.\n",
     "\n",
     "![Spaaaace](http://princetoninnovation.org/magazine/wp-content/uploads/2015/12/5162405776_c55a983222_z.jpg)\n",
     "\n",
+    "## And here's a Youtube Video of JFK's Moon Speech in 1962.\n",
     "\n",
-    "   The great thing about Markdown is that it makes it easy to log your work while you code! It's also easier to share: instead of having to comment every last variable, you can have summaries scattered throughout the text."
+    "[![JFK](http://img.youtube.com/vi/TuW4oGKzVKc/0.jpg)](https://www.youtube.com/watch?v=TuW4oGKzVKc)\n",
+    "```\n",
+    "---\n",
+    "*Output*\n",
+    "\n",
+    "## You can even link images and videos. Here's a picture from innovation's space article.\n",
+    "\n",
+    "![Spaaaace](http://princetoninnovation.org/magazine/wp-content/uploads/2015/12/5162405776_c55a983222_z.jpg)\n",
+    "\n",
+    "## And here's a Youtube Video of JFK's Moon Speech in 1962.\n",
+    "\n",
+    "[![JFK](http://img.youtube.com/vi/TuW4oGKzVKc/0.jpg)](https://www.youtube.com/watch?v=TuW4oGKzVKc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For more on Markdown, check out this [cheatsheet!](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet)\n",
+    "\n",
+    "The great thing about Markdown is that it makes it easy to __log your work__!\n",
+    "\n",
+    "It's also __easier to share:__ instead of having to comment every last variable, you can have summaries scattered throughout the text."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2: Basics of Code Cells\n",
+    "\n",
+    "Below is a code cell. To run it, press *Shift+Enter*.\n",
+    "\n",
+    "The output goes below, and it stays there until you run it again.\n",
+    "\n",
+    "Try changing what it prints and running it again!"
    ]
   },
   {
@@ -61,15 +220,19 @@
     }
    ],
    "source": [
-    "# This is a code cell. To run it, press Shift+Enter. \n",
-    "# The output goes below, and it stays there until you run it again!\n",
-    "\n",
     "print \"Hello world!\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Code cells aren't just python cells. You can issue terminal commands by prefacing the command with an exclamation point (!)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -79,34 +242,68 @@
      "output_type": "stream",
      "text": [
       "Show the files in the current directory:\n",
-      "JupyterTutorial.ipynb trees.txt\n",
+      "\u001b[34mImages\u001b[m\u001b[m                          USA_Today_4_25_16.txt\n",
+      "JupyterTutorial.ipynb           USA_Today_4_25_16_xkcdified.txt\n",
+      "README.md                       trees.txt\n",
+      "State_Of_Union_2015.txt         xkcd_substitutions.txt\n",
       "\n",
       "What directory are we in?\n",
-      "/Users/jlu96/Dropbox/Writing/Innovation/Jupyter\n",
+      "/Users/jlu96/Dropbox/Writing/Innovation/JupyterTutorial\n",
       "\n",
-      "Can we change directories?\n",
-      "Now we're in :\n",
-      "/Users/jlu96/Dropbox/Writing/Innovation/Jupyter\n",
+      "We can make a new directory. Now it shows up when we run ls:\n",
+      "\u001b[34mImages\u001b[m\u001b[m                          USA_Today_4_25_16_xkcdified.txt\n",
+      "JupyterTutorial.ipynb           \u001b[34mnewdir\u001b[m\u001b[m\n",
+      "README.md                       trees.txt\n",
+      "State_Of_Union_2015.txt         xkcd_substitutions.txt\n",
+      "USA_Today_4_25_16.txt\n",
       "\n",
-      "Cool, that's it for now.\n",
-      "/bin/sh: line 0: cd: Jupyter: No such file or directory\n"
+      "Alright, let's remove it.\n",
+      "\u001b[34mImages\u001b[m\u001b[m                          USA_Today_4_25_16.txt\n",
+      "JupyterTutorial.ipynb           USA_Today_4_25_16_xkcdified.txt\n",
+      "README.md                       trees.txt\n",
+      "State_Of_Union_2015.txt         xkcd_substitutions.txt\n",
+      "\n",
+      "We can also view files. The first lines of trees.txt are:\n",
+      "Index\tGirth\tHeight\tVolume\n",
+      "1\t8.3\t70\t10.3\n",
+      "2\t8.6\t65\t10.3\n",
+      "3\t8.8\t63\t10.2\n",
+      "4\t10.5\t72\t16.4\n",
+      "5\t10.7\t81\t18.8\n",
+      "6\t10.8\t83\t19.7\n",
+      "7\t11\t66\t15.6\n",
+      "8\t11\t75\t18.2\n",
+      "9\t11.1\t80\t22.6\n"
      ]
     }
    ],
    "source": [
-    "# Code cells aren't just python cells. You can issue terminal commands\n",
-    "# By prefacing the code with an exclamation.\n",
-    "\n",
     "print \"Show the files in the current directory:\"\n",
     "!ls\n",
     "print \"\\nWhat directory are we in?\"\n",
     "!pwd\n",
-    "print \"\\nCan we change directories?\"\n",
-    "!cd ..\n",
-    "print \"Now we're in :\"\n",
-    "!pwd\n",
-    "print \"\\nCool, that's it for now.\"\n",
-    "!cd Jupyter"
+    "print \"\\nWe can make a new directory. Now it shows up when we run ls:\"\n",
+    "!mkdir newdir\n",
+    "!ls\n",
+    "print \"\\nAlright, let's remove it.\"\n",
+    "!rm -r newdir\n",
+    "!ls\n",
+    "print \"\\nWe can also view files. The first lines of trees.txt are:\"\n",
+    "!head trees.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another great thing about jupyter is that when you run a cell, __the variables\n",
+    "stay the same between cells!__\n",
+    "\n",
+    "In the below cell, you set the value of a and b.\n",
+    "\n",
+    "In the cell after that, you can perform the same calculations over that cell.\n",
+    "\n",
+    "This makes it easy to split up work. It avoids excessively long cells."
    ]
   },
   {
@@ -125,8 +322,6 @@
     }
    ],
    "source": [
-    "# The great thing about jupyter is that when you run a cell, the variables\n",
-    "# stay the same between cells! \n",
     "a = 3\n",
     "b = \"I lost\"\n",
     "print \"a is\", a, \"and b is\", b"
@@ -148,7 +343,7 @@
     }
    ],
    "source": [
-    "# This makes it easy to split up work\n",
+    "\n",
     "a *= 2\n",
     "b += \" the game\"\n",
     "print \"Now a is\", a, \"and b is\", b"
@@ -158,14 +353,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### There are a bunch of great keyboard shortcuts. Click Help to look them up!\n",
+    "Jupyter has builtin __magic commands.__\n",
     "\n",
-    "### Sold on Jupyter yet? If not, keep reading. It's like magic!"
+    "Say I have some to time my code. \n",
+    "\n",
+    "Easy: `add %time` to do so."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -174,45 +371,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4 µs, sys: 13 µs, total: 17 µs\n",
-      "Wall time: 21 µs\n"
+      "time for short code: \n",
+      "CPU times: user 5 µs, sys: 14 µs, total: 19 µs\n",
+      "Wall time: 29.1 µs\n",
+      "time for long code: \n",
+      "CPU times: user 698 ms, sys: 154 ms, total: 852 ms\n",
+      "Wall time: 950 ms\n"
      ]
     }
    ],
    "source": [
-    "# Jupyter has builtin \"magic\" commands\n",
-    "# Say I want to time my code. Easy: add %time to do so.\n",
-    "\n",
-    "%time x = 2 * 2 * 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 532 ms, sys: 39.5 ms, total: 571 ms\n",
-      "Wall time: 576 ms\n"
-     ]
-    }
-   ],
-   "source": [
-    "# for longer code, use %%timeit\n",
-    "# if it's too long, you can restart the kernel\n",
+    "print \"time for short code: \"\n",
+    "%time x = 2 * 2 * 2\n",
     "\n",
     "def long_code():\n",
     "    for i in range(10000000):\n",
     "        x = 2**130\n",
     "\n",
+    "print \"time for long code: \"\n",
+    "%time long_code()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the cell ever takes too long to run, you can stop the kernel by clicking the \"Stop\" button in the toolbar.\n",
     "\n",
-    "%time long_code()\n",
-    "\n"
+    "Or, you can restart. Note that this will erase all the variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`%timeit` will time whatever you evaluate multiple times and give you the best, and the average times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000 loops, best of 3: 972 µs per loop\n",
+      "10 loops, best of 3: 97.4 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def several_loops():\n",
+    "    for i in range(1000):\n",
+    "        a = np.random.uniform(0, 1)\n",
+    "        b = np.random.randint(1, 100000)\n",
+    "        a * b\n",
+    "\n",
+    "%timeit several_loops()\n",
+    "\n",
+    "def several_long_loops():\n",
+    "    for i in range(100000):\n",
+    "        a = np.random.uniform(0, 1)\n",
+    "        b = np.random.randint(1, 100000)\n",
+    "        a * b\n",
+    "        \n",
+    "%timeit several_long_loops()"
    ]
   },
   {
@@ -223,9 +452,9 @@
    },
    "outputs": [],
    "source": [
-    "# Another great command is tab completion. Got an annoyingly long variable?\n",
     "\n",
-    "an_annoyingly_long_variable_name = set([3,4,5,6])\n",
+    "\n",
+    "\n",
     "\n",
     "def slightly_shorter_function_name():\n",
     "    print \"hi\""
@@ -268,36 +497,12 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Section 1: Basic Data Analysis: Plotting, Regression, Interpolation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "# First let's import the basic stack\n",
-    "import numpy as np\n",
-    "import csv\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "datafile = 'trees.txt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Section 2: Lists, Tuples, Sorting and Lambdas"
+    "Part 2: Basics of Python\n",
+    "========================"
    ]
   },
   {
@@ -744,40 +949,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Part 3: Basic Data Analysis: Plotting, Regression, Interpolation\n",
+    "================================================================"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Section 4: Some Miscellaneous Other Tricks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# What's the fastest way to find the first integer in a REALLY long list that's greater than 100000?\n",
+    "# First let's import the basic stack\n",
     "import numpy as np\n",
+    "import csv\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "mean = 0\n",
-    "std = 1\n",
-    "length = 10000000\n",
-    "long_random_list = np.random.normal(0, 1, length)\n",
-    "threshold = 5\n",
-    "\n",
-    "%time print min([i for i in range(length) if long_random_list[i] > threshold])\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "%time print np.where(long_random_list > threshold)\n",
-    "\n",
-    "# Heatmap"
+    "datafile = 'trees.txt'"
    ]
   },
   {
@@ -1214,6 +1406,43 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Section 4: Some Miscellaneous Other Tricks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# What's the fastest way to find the first integer in a REALLY long list that's greater than 100000?\n",
+    "import numpy as np\n",
+    "\n",
+    "mean = 0\n",
+    "std = 1\n",
+    "length = 10000000\n",
+    "long_random_list = np.random.normal(0, 1, length)\n",
+    "threshold = 5\n",
+    "\n",
+    "%time print min([i for i in range(length) if long_random_list[i] > threshold])\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "%time print np.where(long_random_list > threshold)\n",
+    "\n",
+    "# Heatmap"
+   ]
   }
  ],
  "metadata": {
