--- a/JupyterTutorial.ipynb
+++ b/JupyterTutorial.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "You should see an image like the below:\n",
     "\n",
-    "<img src=\"Images/NotebookStartup.png\">"
+    "![Startup](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/NotebookStartup.png)"
    ]
   },
   {
@@ -46,14 +46,14 @@
    "source": [
     "Click JupyterTutorial.ipynb to get to this page:\n",
     "    \n",
-    "<img2 src=\"Images/NotebookFirstPage.png\">"
+    "![First Page](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/NotebookFirstPage.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Run the User Interface Tutorial by going to \"Help\" under the toolbar, and clicking \"User Interface Tour.\"\n",
+    "__Run the User Interface Tutorial__ by going to \"Help\" under the toolbar, and clicking \"User Interface Tour.\"\n",
     "\n",
     "Once you're done with that, we can begin the tutorial."
    ]
@@ -160,7 +160,7 @@
    "source": [
     "*Code*\n",
     "```Markdown\n",
-    "## You can even link images and videos. Here's a picture from innovation's space article.\n",
+    "## You can even link images and videos. Here's a picture from Innovation's recent [space article.](http://princetoninnovation.org/magazine/2016/03/31/mysteries-center-galaxy/)\n",
     "\n",
     "![Spaaaace](http://princetoninnovation.org/magazine/wp-content/uploads/2015/12/5162405776_c55a983222_z.jpg)\n",
     "\n",
@@ -171,7 +171,7 @@
     "---\n",
     "*Output*\n",
     "\n",
-    "## You can even link images and videos. Here's a picture from innovation's space article.\n",
+    "## You can even link images and videos. Here's a picture from Innovation's recent [space article.](http://princetoninnovation.org/magazine/2016/03/31/mysteries-center-galaxy/)\n",
     "\n",
     "![Spaaaace](http://princetoninnovation.org/magazine/wp-content/uploads/2015/12/5162405776_c55a983222_z.jpg)\n",
     "\n",
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -419,8 +419,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000 loops, best of 3: 972 µs per loop\n",
-      "10 loops, best of 3: 97.4 ms per loop\n"
+      "timeit for several loops:\n",
+      "1000 loops, best of 3: 1.01 ms per loop\n",
+      "\n",
+      "timeit for several long loops:\n",
+      "10 loops, best of 3: 103 ms per loop\n"
      ]
     }
    ],
@@ -433,6 +436,7 @@
     "        b = np.random.randint(1, 100000)\n",
     "        a * b\n",
     "\n",
+    "print \"timeit for several loops:\"\n",
     "%timeit several_loops()\n",
     "\n",
     "def several_long_loops():\n",
@@ -440,20 +444,30 @@
     "        a = np.random.uniform(0, 1)\n",
     "        b = np.random.randint(1, 100000)\n",
     "        a * b\n",
-    "        \n",
+    "\n",
+    "print \"\\ntimeit for several long loops:\"\n",
     "%timeit several_long_loops()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "\n",
-    "\n",
+    "an_annoyingly_long_variable_name = set([])\n",
     "\n",
     "\n",
     "def slightly_shorter_function_name():\n",
@@ -461,8 +475,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Type the first few letters:\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# No more typing!\n",
+    "an_annoyingly_long_variable_name\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "slightly_shorter_function_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -470,22 +510,19 @@
     {
      "data": {
       "text/plain": [
-       "<function union>"
+       "<function numpy.core.multiarray.arange>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# No more typing!\n",
-    "an_annoyingly_long_variable_name\n",
+    "an_annoyingly_long_variable_name.difference\n",
     "\n",
-    "slightly_shorter_function_name\n",
-    "\n",
-    "# It Even has completion for the variable methods/attributes!\n",
-    "an_annoyingly_long_variable_name.union"
+    "import numpy as np\n",
+    "np.arange"
    ]
   },
   {
