--- a/JupyterTutorial.ipynb
+++ b/JupyterTutorial.ipynb
@@ -478,8 +478,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Type the first few letters:\n",
-    "\n"
+    "Type the first few letters and press `Tab`.\n",
+    "\n",
+    "![tab_completion_a_1](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/tab_completion_a_1.png)\n",
+    "\n",
+    "Then, press `Enter`.\n",
+    "\n",
+    "![tab_completion_a_2](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/tab_completion_a_2.png)\n",
+    "\n",
+    "If it's not the first that shows up, use the arrows to scroll down.\n",
+    "\n",
+    "![tab_completion_s_1](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/tab_completion_s_1.png)\n",
+    "\n",
+    "This works for __any type of object: variables, functions, modules__, you name it."
    ]
   },
   {
@@ -496,8 +507,27 @@
     "\n",
     "\n",
     "\n",
+    "slightly_shorter_function_name\n",
     "\n",
-    "slightly_shorter_function_name"
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also automatically look up the attributes and functions of your object by inserting a `.` and hitting `tab`.\n",
+    "\n",
+    "![tab_completion_f_1](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/tab_completion_f_1.png)\n",
+    "\n",
+    "This also works for imported modules. First import numpy:\n",
+    "\n",
+    "![tab_completion_n_1](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/tab_completion_n_1.png)\n",
+    "\n",
+    "Then, hit `.` and `tab`:\n",
+    "\n",
+    "![tab_completion_n_2](https://github.com/lujonathanh/JupyterTutorial/raw/master/Images/tab_completion_n_2.png)\n"
    ]
   },
   {
