First full draft

--- a/JupyterTutorial.ipynb
+++ b/JupyterTutorial.ipynb
@@ -2082,6 +2082,46 @@
     "plt.ylabel(\"Cos(Theta)\", fontsize=20)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion\n",
+    "==========\n",
+    "\n",
+    "And that's it! I hope you had fun during this tutorial. As a summary, we covered:\n",
+    "\n",
+    "- the basics of __Markdown__, including headings, lists, and images\n",
+    "- useful __Jupyter__ features, including terminal connection, tab completion and magics\n",
+    "- the basics of __Python__, including lists, sorts, list comprehensions, dictionaries, and functions\n",
+    "- a tiptoe into __data analysis__ with __numpy__ and __matplotlib__, including histograms, regressions, and interpolation.\n",
+    "\n",
+    "Stay tuned for next notebook!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sources\n",
+    "=======\n",
+    "    \n",
+    "https://plot.ly/python/ipython-notebook-tutorial/\n",
+    "https://www.youtube.com/watch?v=DUCQ_HZamhs\n",
+    "https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet\n",
+    "https://stat.ethz.ch/R-manual/R-devel/library/datasets/html/00Index.html (for trees.txt)\n",
+    "http://www.usatoday.com/story/news/politics/elections/2016/04/25/suffolk-poll-trump-clinton-party-divides-president-republican-democrat/83487862/ (for USA_Today_4_25_16.txt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
